BLC-316 - Provide button to "auto-populate" most of the submit order screen on the checkout page.

--- a/src/main/webapp/css/checkout.css
+++ b/src/main/webapp/css/checkout.css
@@ -106,3 +106,14 @@ tr.highlight td {
 .creditCardPayment {
 	margin: 20px 0px 20px 0px;
 }
+
+.fillButton{
+    float: right;
+    margin-right: 140px;
+    margin-top: 15px;
+}
+.fillButton p {
+    padding-top: 15px;
+    padding-left: 15px;
+    font-style: italic;
+}
